# RPi4b-ROS-testing

./: .gitignore  README.md
.gy6500_cpp/: package.xml
.gy6500_cpp/src/: gy6500.cpp  gy6500.h
.tele_op/msg/: Key.msg
.tele_op/src/: keyboard.cpp  keyboard.h
.tele_op_cpp/: CMakeLists.txt  generate_message.rb  package.xml
.tele_op_cpp/src/: .keyboard.cpp.swp  tele_op.cpp
answer_led/: CMakeLists.txt  package.xml
answer_led/launch/: answer.launch
answer_led/src/: #answer_led.cpp#  answer_led.cpp  answer_led.cpp~
blinking_led/: CMakeLists.txt  package.xml
blinking_led/src/: bcm2835.h  blinking_led.cpp  blinking_led.cpp.save
blinking_led/test/: blink.c
dashboard/: CMakeLists.txt  package.xml
dashboard/src/: dashboard.py
gy6500/: CMakeLists.txt
gy6500/src/: gy6500.cpp  main.cpp
gy6500_python/: CMakeLists.txt  package.xml
gy6500_python/src/: gy6500.py
motor/: CMakeLists.txt  package.xml
motor/src/: calibrate.py  motor.py  msa.py
talker/: CMakeLists.txt  package.xml
talker/src/: talker.cpp
tele_op_python/: CMakeLists.txt  package.xml
tele_op_python/src/: keypress.py
